/*
 * $Id: ChangeLog,v 1.106 2006-02-25 16:29:27 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-02-25 10:25 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_hotkey.prg
    * Added runtime error when key definition is not valid.
    * Added "CTRL" definition and fixed "CONTROL" keyword.

2006-02-24 21:25 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_keybd.ch
  * source/h_hotkey.prg
    * Moved all ON KEY, RELEASE KEY and STORE KEY commands to a
      single declaration. "Key" definition is recognized by
      the same function, instead of creating multiple preprocessor's
      commands for each one.
  - source/c_hotkey.c
  * source/makelib.bat
    * Moved source code from c_hotkey.c to h_hotkey.prg .
    - c_hotkey.c removed.
  * source/h_report.prg
    * Removed few unused variables (warnings).

2006-02-24 07:30 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg
  * include/i_report.ch
    * fixed problem grouping when display formats
    * missing "" in translate for grouping

2006-02-19 22:43 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg
    * fixed problem grouping

2006-02-19 21:25 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Re-directing field/macro generation to browse's workarea.

2006-02-18 23:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
  * source/c_windows.c
  * source/h_windows.prg
    * Added hb_dynsymSymbol() as MACRO for older Harbour versions.

2006-02-15 15:59 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg
  *include/i_report.ch
     *  do report adjust and new NOFIXED parameter (space between lines)

2006-02-12 00:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c