@@ -1,5 +1,5 @@
 /*
- * $Id: c_controlmisc.c,v 1.25 2006-02-19 05:05:10 guerra000 Exp $
+ * $Id: c_controlmisc.c,v 1.26 2006-02-26 05:41:35 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -91,6 +91,13 @@
 	Copyright 1999-2003, http://www.harbour-project.org/
 ---------------------------------------------------------------------------*/
 
+#ifndef __XHARBOUR__
+   #if !defined( _HB_API_INTERNAL_ )
+      #define _HB_API_INTERNAL_
+   #endif
+   #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
+#endif
+
 #define _WIN32_IE      0x0500
 #define HB_OS_WIN_32_USED
 #define _WIN32_WINNT   0x0400
@@ -115,10 +122,6 @@
 #include "winreg.h"
 #include "tchar.h"
 #include "../include/oohg.h"
-
-#ifndef _HB_API_INTERNAL_
-    #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
-#endif
 
 PHB_SYMB *s_Symbols = NULL;
 
