@@ -1,11 +1,18 @@
 /*
- * $Id: ChangeLog,v 1.106 2006-02-25 16:29:27 guerra000 Exp $
+ * $Id: ChangeLog,v 1.107 2006-02-26 05:41:34 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-02-25 23:33 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_controlmisc.c
+  * source/c_windows.c
+  * source/h_windows.prg
+    * New try for fix the hb_dynsymSymbol() problem in different
+      Harbour versions.
 
 2006-02-25 10:25 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_hotkey.prg
